cmake_minimum_required(VERSION 3.8)
project(cpp_parameters)

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

add_executable(minimal_param_node src/cpp_parameters_node.cpp)
ament_target_dependencies(minimal_param_node rclcpp)

install(TARGETS
  minimal_param_node
  DESTINATION lib/${PROJECT_NAME}
)


# Needed for launch file
install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
